# LuIbexWin

./: CMakeLists.txt  Include  README.md  README.txt  Src  doc  windows
Include/: globalhelpers.h  windowsfuncs.h
Src/: filesystem.cpp  funwindows.cpp  loadlibrary.cpp  process.cpp  winMessages.cpp  windowsfuncs.cpp  winmemory.cpp
doc/: doc.md
windows/: h.lua
